; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/butterflies/extr_butterflies.c_InitOGLWindow.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/butterflies/extr_butterflies.c_InitOGLWindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i32, i32 }

@PFD_SUPPORT_OPENGL = common dso_local global i32 0, align 4
@PFD_DRAW_TO_WINDOW = common dso_local global i32 0, align 4
@PFD_DOUBLEBUFFER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InitOGLWindow(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @GetDC(i32 %7)
  store i32 %8, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %9 = call i32 @ZeroMemory(%struct.TYPE_6__* %5, i32 20)
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32 20, i32* %10, align 4
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  store i32 1, i32* %11, align 4
  %12 = load i32, i32* @PFD_SUPPORT_OPENGL, align 4
  %13 = load i32, i32* @PFD_DRAW_TO_WINDOW, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @PFD_DOUBLEBUFFER, align 4
  %16 = or i32 %14, %15
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 2
  store i32 %16, i32* %17, align 4
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 3
  store i32 24, i32* %18, align 4
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 4
  store i32 24, i32* %19, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @ChoosePixelFormat(i32 %20, %struct.TYPE_6__* %5)
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @DescribePixelFormat(i32 %22, i32 %23, i32 20, %struct.TYPE_6__* %5)
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @SetPixelFormat(i32 %25, i32 %26, %struct.TYPE_6__* %5)
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @wglCreateContext(i32 %28)
  store i32 %29, i32* %4, align 4
  %30 = load i32, i32* %3, align 4
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @wglMakeCurrent(i32 %30, i32 %31)
  %33 = load i32, i32* %2, align 4
  %34 = load i32, i32* %3, align 4
  %35 = call i32 @ReleaseDC(i32 %33, i32 %34)
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @GetDC(i32) #1

declare dso_local i32 @ZeroMemory(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @ChoosePixelFormat(i32, %struct.TYPE_6__*) #1

declare dso_local i32 @DescribePixelFormat(i32, i32, i32, %struct.TYPE_6__*) #1

declare dso_local i32 @SetPixelFormat(i32, i32, %struct.TYPE_6__*) #1

declare dso_local i32 @wglCreateContext(i32) #1

declare dso_local i32 @wglMakeCurrent(i32, i32) #1

declare dso_local i32 @ReleaseDC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
